# JavaDependencyGraph

./: .gitignore  CLAUDE.md  README.md  SETUP_GUIDE.md  config_example.env  example_migration.py  pyproject.toml  requirements.txt  run_tests.bat  run_tests.sh  sample_ticket.txt  test_kg_fix.py
.claude/: settings.local.json
example_java_project/: User.java  UserService.java
src/: __init__.py  migration_cli.py
src/dependency_graph/: analyzer.py  dependency_analyzer.py  dot_exporter.py  java_parser.py  jira_parser.py  knowledge_graph_generator.py  llm_integration.py  mandate_filter.py  migration_engine.py  subgraph_extractor.py
src/tests/: test_parser.py
src/utils/: file_utils.py
